# snapcase

./: .gitignore  Cargo.toml  README.md  suggestions.txt
html/: aisles.js  app.js  index.html  products.js  rendering.js  scripts.js  snapcase.html  snapcase__BACKUP.html  static.js  styles.css
illustrations/: overview.key
src/: lib.rs
src/caboose/: row_accumulator.rs  serialize.rs  similar_row.rs  sparse_topk_index.rs  topk.rs  utils.rs
src/demo/: database.rs  mod.rs
src/materialised/: mod.rs  types.rs
src/tifuknn/: aggregation.rs  dataflow.rs  hyperparams.rs  mod.rs  types.rs
src/web/: changes.rs  dataflow.rs  messaging.rs  mod.rs  types.rs
