[package]
name = "snapcase"
version = "0.1.0"
edition = "2021"

# https://github.com/blas-lapack-rs/blas-lapack-rs.github.io/wiki
[dependencies]
timely = "0.12.0"
differential-dataflow = "0.12.0"
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
itertools = "0.9.0"
fnv = "1.0.2"
csv = "1.0"
rand = "0.6"
path-absolutize = "3.0.10"
numpy = "0.17.2"
sprs = "0.11"
num_cpus = "1.15.0"
rayon = "1.6.1"
ndarray-npy = "0.8.1"
average = "0.13.1"
indicatif = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
core_affinity = "0.7.6"
duckdb = "0.9.2"
ws = "0.9"
serde_json = "1.0"
serde_derive = "1.0"